Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56302

Checkbox is not centered when its layour rect is larger than indicator

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.3, 5.7.1
    • 5.6
    • WebKit
    • None

    Description

      In following test, checkbox indicator is centered in other borwsers, but QtWebKit paints it on the left side. This issue affects Inspector UI, part .

      <style>
          div { width: 110px; height: 110px; background-color: #ee8abb; }
          #big_input { width: 100px; }
      </style>
      <div>
          <input id="big_input" type="checkbox" checked>
      </div>
      

      Attachments

        For Gerrit Dashboard: QTBUG-56302
        # Subject Branch Project Status CR V

        Activity

          People

            annulen Konstantin Tokarev
            annulen Konstantin Tokarev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes