Fixed checkbox and radiobutton indicators

When layout rect is smaller than indicator its edges may not be
repainted properly. Now we center indicator repsectively to layout rect
and inflate repaint rect to cover edges.

Also, when layout rect is larger than indicator, QStyle code paints it
at the top-left corner of given rect. Now indicator is centered, like
other browser engines do.

Note that when layout has auto size for checkbox or radiobutton, their
sizes are adjust beforehand in RenderThemeQStyle::computeSizeBasedOnStyle().
This code path is require only when layout forces checkbox or radiobutton
to be smaller than optimal indicator size.

Task-number: QTBUG-56302
Change-Id: Idaefffc5775055514a430216ea265af2b3a039b4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>